tests/paczka1/fuzzy1/90087023.err
Error in line 4: VRYÀ S380 94,0
Error in line 1: VRYE S380 32,2
Error in line 16: Huh3hZ5 S15 4,1
Error in line 21: IeDJeewP S150 73,5
Error in line 25: cVI S284 12,9
Error in line 31: IeDJeewP A285 u1,u
Error in line 29: cVI S150 63,5
Error in line 28: Ios S284 75,0
Error in line 26: IeDJeewP S284 93,6
